--- a/views/index.jade
+++ b/views/index.jade
@@ -2,10 +2,10 @@ extend layout
 
 block tabs
   .tabs
-    a.my-feed.selected(data-url='/my/feed', href='javascript:;', title='My Feed', class='initial') My Feed
-    a.user-mentions(data-url='/user/mentions/#{session.id}', href='javascript:;', title='Mentions') Mentions
-    a.user-interactions(data-url='/user/interactions/#{session.id}', href='javascript:;', title='Interact') Interact
-    a.global-feed(data-url='/global/feed', href='javascript:;', title='Global') Global
+    a.my-feed.selected(data-url='/my/feed', data-action='my-feed', href='javascript:;', title='My Feed', class='initial') My Feed
+    a.user-mentions(data-url='/user/mentions/#{session.id}', data-action='user-mentions', href='javascript:;', title='Mentions') Mentions
+    a.user-interactions(data-url='/user/interactions/#{session.id}', data-action='user-interactions', href='javascript:;', title='Interact') Interact
+    a.global-feed(data-url='/global/feed', href='javascript:;', data-action='global-feed', title='Global') Global
 
 block content
   if session
