--- a/views/messages.jade
+++ b/views/messages.jade
@@ -14,9 +14,10 @@ block content
 
     .write.channel-message
       form(method='post', class='channel-message-form')
+        span.tip Usernames must start with @ and are required if you are starting a new private channel
         label(for='destinations', id='recipients') Recipients
           input(type='text', name='destinations', value='', id='destination', placeholder='Optional usernames (space-delimited)', autocomplete='off')
-        textarea(name='text', class='writeable submittable')
+        textarea(name='text', class='writeable submittable', placeholder='Enter your message')
         input(type='hidden', name='channel_id', id='channel-id', value='', autocomplete='off')
         input(type='hidden', name='_csrf', value='#{csrf}')
         .form-action-wrapper
