force width of textarea

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1602,6 +1602,10 @@ img.hush {
         margin-top: 52px;
     }
 
+    .write textarea {
+        width: 260px;
+    }
+
     #map-menu {
         display: none;
     }
