added privacy and terms

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -70,6 +70,10 @@ html
               li
                 a(href='javascript:;', id='settings-link', title='Edit settings') Edit Settings
               li
+                a(href='https://github.com/nooodle/noodleapp/docs/terms.md') Terms
+              li
+                a(href='https://github.com/nooodle/noodleapp/docs/privacy.md', target='_blank') Privacy Policy
+              li
                 a(href='/logout', title='Sign out') Log out
 
     if session
