--- a/views/layout.jade
+++ b/views/layout.jade
@@ -70,7 +70,7 @@ html
               li
                 a(href='javascript:;', id='settings-link', title='Edit settings') Edit Settings
               li
-                a(href='https://github.com/nooodle/noodleapp/blob/master/docs/terms.md') Terms
+                a(href='https://github.com/nooodle/noodleapp/blob/master/docs/terms.md', target='_blank') Terms
               li
                 a(href='https://github.com/nooodle/noodleapp/blob/master/docs/privacy.md', target='_blank') Privacy Policy
               li
