--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -448,9 +448,11 @@ header a#notifications.on:hover {
     color: #111;
 }
 
+/*
 .form-action-wrapper {
     display: none;
 }
+*/
 
 #overlay .form-action-wrapper {
     display: block;
