--- a/views/profile.jade
+++ b/views/profile.jade
@@ -8,7 +8,7 @@ block tabs
 
 block content
   #profile(style='background-image: url(#{user.cover_image.url});')
-    img(src='#{user.avatar_image.url}')
+    img(src='#{user.avatar_image.url}?h=200')
     .user-info
       h2= user.name
       if session && (user.id !== session.id)
