porting to pnut.io

--- a/views/index.jade
+++ b/views/index.jade
@@ -20,5 +20,5 @@ block content
     section.public
       ol.messages
         li
-          h1 You need to sign in with your App.net account to see this glorious noodle.
+          h1 You need to sign in with your pnut.io account to see this glorious noodle.
           a(href='/auth/appdotnet', id='login') Log in
