--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -502,6 +502,7 @@ ol.messages #paginated.loading {
     height: 40px;
     margin-right: 10px;
     width: 40px;
+    background-color: #ddd;
 }
 
 #overlay .users li a {
@@ -1079,6 +1080,7 @@ ol.messages > li .meta {
     height: 40px;
     margin: 0 5px 0 10px;
     width: 40px;
+    background-color: #ddd;
 }
 
 .clear {
