--- a/views/_messages.pug
+++ b/views/_messages.pug
@@ -1,5 +1,5 @@
 ul#message-detail
   for message in messages
     li
-      img(src='#{message.user}', class='avatar')
+      img(src=message.user, class='avatar')
       p!= message.message
