--- a/views/messages.pug
+++ b/views/messages.pug
@@ -2,6 +2,7 @@ extend layout
 
 block content
   .message-wrapper
+    button(class='new-pm') New PM
     h1 Recent Messages
 
     .write.channel-message
